--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Stephanie Lucano",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
